arunprasath_jayaprakash/website/static/style.css
/* styles.css */

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
}

h1 {
    text-align: center;
    margin-top: 50px;
    padding: 10px 20px;
}

a {
  text-decoration: none;
}

button {
    display: inline-block;
    margin: 20px auto;
    padding: 10px 20px;
    background-color: #4caf50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
}

a.button {
    appearance: button;
    text-decoration: none;
    display: button;
    margin: 20px;
    padding: 10px 20px;
    background-color: #4caf50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    margin: 0;
    position: absolute;
   top: 20%;
   right: 45%;
   -ms-transform: translateY(50%);
   transform: translateY(50%);
}

a.button:hover {
    background-color: #45a049;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px 0;
    position: fixed;
    bottom: 0;
    width: 100%;
}

.center {
  margin-left: auto;
  margin-right: auto;
  border-bottom: 1px solid black;
}

.space-right {
    padding-right : 5.5em;
    font-size: 20px
}

.space-center {
    padding-left : -5em;
    padding-right : 5em;
    font-size: 20px
}

.space-bottom {
    padding-bottom : 3em;
}

.space {
    font-size: 20px
}

.input_button {
    text-align:center;
    position : right;
    top: 20%;
   right: 44.5%;
}

input[type=submit] {
    appearance: button;
    text-decoration: none;
    display: button;
    margin: 10px;
    padding: 10px 20px;
    background-color: #4caf50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    /*margin: 0;*/
    position: absolute;
   top: 25%;
   right: 51%;
   -ms-transform: translateY(50%);
   transform: translateY(50%);
}

input[type=button] {
    appearance: button;
    text-decoration: none;
    display: button;
    margin: 10px;
    padding: 10px 20px;
    background-color: #4caf50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    /*margin: 0;*/
    position: absolute;
   top: 25%;
   right: 41%;
   -ms-transform: translateY(50%);
   transform: translateY(50%);
}

.info {
    padding-right : 4em;
    font-size: 15px
}

.button-cancel{
    appearance: button;
    text-decoration: none;
    display: button;
    margin: 10px;
    padding: 10px 20px;
    background-color: #4caf50;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 16px;
    /*margin: 0;*/
    position: absolute;
   top: 25%;
   right: 41%;
   -ms-transform: translateY(50%);
   transform: translateY(50%);
}

p {
   text-align: center;
}

a.fa_fa-pencil {
    right: 41%
}

a.delete-bin {
    right: 50%
}

.div-button {
    padding:1em;
    text-align: center;
    display:inline-block;
    text-decoration: none !important;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -ms-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

.container{
    width: 100%;
    text-align: center;
}

.container button{
  color: white;
  display: grid;
  font-size: 1rem;
  position: relative;
  place-items: center;
  border: 1px solid white;
  width : auto;
}

.container button:nth-child(odd) {
  background-color: red;
}

.container button:nth-child(even) {
  background-color: green;
    display: inline-block;
    width: auto;
}
.div-button-1 {
    background: #138d19;
    padding: 10px;
    text-align: center;
    border-radius: 4px;
    color: white;
    font-weight: bold;
    line-height: 25px;

}

